--- a/todo.txt
+++ b/todo.txt
@@ -25,5 +25,7 @@
 - View cart DONE - 21.06.2022
     + A cart item should be a component
 - Change contents of cart DONE - 21.06.2022
-    - Implement/Decrement content
+    - Increment/Decrement content
     - Remove from cart
+- Make it possible to sign up DONE - 21.06.2022
+- Make it possible to log in DONE - 21.06.2022
