--- a/todo.txt
+++ b/todo.txt
@@ -29,3 +29,4 @@
     - Remove from cart
 - Make it possible to sign up DONE - 21.06.2022
 - Make it possible to log in DONE - 21.06.2022
+- Create a simple my account page DONE - 21.06.2022
