--- a/todo.txt
+++ b/todo.txt
@@ -30,3 +30,4 @@
 - Make it possible to sign up DONE - 21.06.2022
 - Make it possible to log in DONE - 21.06.2022
 - Create a simple my account page DONE - 21.06.2022
+- Proceed to checkout(Authentication) IN PROGRESS - 21.06.2022
