--- a/todo.txt
+++ b/todo.txt
@@ -31,3 +31,7 @@
 - Make it possible to log in DONE - 21.06.2022
 - Create a simple my account page DONE - 21.06.2022
 - Proceed to checkout(Authentication) DONE - 23.06.2022
+- Create a simple success page DONE - 23.06.2022
+- Show my orders on the my account page
+    + An order should be a component
+    
