--- a/todo.txt
+++ b/todo.txt
@@ -32,6 +32,12 @@
 - Create a simple my account page DONE - 21.06.2022
 - Proceed to checkout(Authentication) DONE - 23.06.2022
 - Create a simple success page DONE - 23.06.2022
-- Show my orders on the my account page
+- Show my orders on the my account page DONE - 23.06.2022
     + An order should be a component
+- Deploy Django 
+    + Create a server and access it
+    + Install software
+    + Create postgres database
+    + Create users and virtual enviroment
+    
     
